--- a/web/package.json
+++ b/web/package.json
@@ -11,10 +11,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "isomorphic-ws": "5.0.0",
     "moment": "2.29.4",
     "numeral": "2.0.6",
     "nuxt": "3.0.0",
-    "uuid": "9.0.0"
+    "uuid": "9.0.0",
+    "ws": "8.12.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "6.2.0"
