--- a/api/package.json
+++ b/api/package.json
@@ -1,13 +1,27 @@
 {
   "name": "nexash-api",
-  "version": "23.1.14",
-  "description": "Manages the data API.",
-  "main": "index.js",
-  "repository": "https://github.com/avasdao/nexash",
-  "author": "Ava's DAO developers",
-  "license": "MIT",
+  "version": "23.1.28",
+  "description": "Nexa Shell API",
+  "author": "Ava's DAO <support@avasdao.org>",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "build": "cd slate && bundle exec middleman build --build-dir ../public",
+    "public": "cd slate && bundle exec middleman serve"
+  },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "@magic-sdk/admin": "1.4.1",
+    "bitcoin-core": "4.1.0",
+    "cors": "2.8.5",
+    "csv-parser": "3.0.0",
+    "ethers": "5.7.0",
+    "express": "4.18.1",
+    "moment": "2.29.0",
+    "nodemailer": "6.7.8",
+    "numeral": "2.0.6",
+    "pouchdb": "7.3.0",
+    "superagent": "7.1.3",
+    "uuid": "8.3.2",
+    "validator": "13.7.0"
   }
 }
