--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -2,12 +2,13 @@ version: '3.3'
 
 services:
   web-app:
-    image: nexash
+    image: nexash-api
     build: .
     ports:
-      - '127.0.0.1:3000:3000'
+      - '127.0.0.1:4000:4000'
+      - '127.0.0.1:7227:7227'
     # volumes:
     #   - './:/webapp/'
     environment:
       HOST: 0.0.0.0
-      PORT: 3000
+      PORT: 4000
