--- a/indexer/package.json
+++ b/indexer/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nexash-daemon",
-  "version": "23.1.14",
-  "description": "Manages the server processes.",
+  "name": "nexash-indexer",
+  "version": "23.3.9",
+  "description": "Manages all indexing functions for the suite of Nexa Shell services.",
   "type": "module",
   "main": "index.js",
   "repository": "https://github.com/avasdao/nexash",
@@ -11,6 +11,7 @@
     "@nexajs/rpc": "23.1.12",
     "moment": "2.29.4",
     "numeral": "2.0.6",
-    "uuid": "9.0.0"
+    "uuid": "9.0.0",
+    "zeromq": "^6.0.0-beta.16"
   }
 }
