--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexash-web",
-  "version": "23.1.27",
+  "version": "23.3.9",
   "license": "MIT",
   "description": "NexaShell offers enterprise-class data delivery services for the Nexa blockchain.",
   "scripts": {
@@ -16,7 +16,8 @@
     "numeral": "2.0.6",
     "nuxt": "3.0.0",
     "uuid": "9.0.0",
-    "ws": "8.12.0"
+    "ws": "8.12.0",
+    "zeromq": "6.0.0-beta.16"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "6.2.0"
