--- a/indexer/docker-compose.yml
+++ b/indexer/docker-compose.yml
@@ -1,6 +1,22 @@
 version: '3.7'
 
 services:
+  daemon:
+    build: .
+    image: indexer
+    container_name: indexer
+    restart: always
+    network_mode: 'host'
+    # ports:
+    #   - '127.0.0.1:3000:3000'
+    environment:
+      - COUCHDB_USER=${COUCHDB_USER} # change this to match your system's ENV
+      - COUCHDB_PASSWORD=${COUCHDB_PASSWORD} # change this to match your system's ENV
+    logging: # apply better controls to Docker overlay folder
+      driver: 'json-file'
+      options:
+        max-file: '5'
+        max-size: '10m'
   couchdb:
     image: couchdb
     restart: always
