--- a/indexer/package.json
+++ b/indexer/package.json
@@ -2,8 +2,8 @@
   "name": "nexash-indexer",
   "version": "23.3.9",
   "description": "Manages all indexing functions for the suite of Nexa Shell services.",
-  "type": "module",
   "main": "index.js",
+  "type": "module",
   "repository": "https://github.com/avasdao/nexash",
   "author": "Ava's DAO developers",
   "license": "MIT",
@@ -12,6 +12,6 @@
     "moment": "2.29.4",
     "numeral": "2.0.6",
     "uuid": "9.0.0",
-    "zeromq": "^6.0.0-beta.16"
+    "zeromq": "6.0.0-beta.16"
   }
 }
