--- a/nexadb/package.json
+++ b/nexadb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexadb",
-  "version": "23.3.10",
+  "version": "23.3.11",
   "description": "Manages all indexing functions for the suite of Nexa Shell services.",
   "main": "index.js",
   "type": "module",
@@ -12,6 +12,7 @@
     "moment": "2.29.4",
     "numeral": "2.0.6",
     "pouchdb": "8.0.1",
+    "sse": "0.0.8",
     "uuid": "9.0.0",
     "zeromq": "6.0.0-beta.16"
   }
