--- a/nexadb/package.json
+++ b/nexadb/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "@nexajs/rpc": "23.1.12",
+    "cors": "^2.8.5",
     "express": "4.18.2",
     "express-sse": "0.5.3",
     "moment": "2.29.4",
