--- a/graphql/package.json
+++ b/graphql/package.json
@@ -8,6 +8,7 @@
   "author": "Ava's DAO developers",
   "license": "MIT",
   "dependencies": {
+    "cors": "2.8.5",
     "express": "4.18.2",
     "express-graphql": "0.12.0",
     "graphql": "16.6.0"
