--- a/graphql/docker-compose.yml
+++ b/graphql/docker-compose.yml
@@ -9,5 +9,7 @@ services:
     # volumes:
     #   - './:/webapp/'
     environment:
+      COUCHDB_USER: ${COUCHDB_USER} # change this to match your system's ENV
+      COUCHDB_PASSWORD: ${COUCHDB_PASSWORD} # change this to match your system's ENV
       HOST: 0.0.0.0
       PORT: 3000
