--- a/graphql/package.json
+++ b/graphql/package.json
@@ -11,6 +11,7 @@
     "cors": "2.8.5",
     "express": "4.18.2",
     "express-graphql": "0.12.0",
-    "graphql": "16.6.0"
+    "graphql": "16.6.0",
+    "pouchdb": "8.0.1"
   }
 }
