--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "csv-parser": "3.0.0",
     "ethers": "5.7.0",
     "express": "4.18.1",
+    "express-rate-limit": "^6.7.0",
     "moment": "2.29.0",
     "nodemailer": "6.7.8",
     "numeral": "2.0.6",
