--- a/graphql/package.json
+++ b/graphql/package.json
@@ -13,6 +13,8 @@
     "express-graphql": "0.12.0",
     "express-rate-limit": "6.7.0",
     "graphql": "16.6.0",
-    "pouchdb": "8.0.1"
+    "graphql-ws": "5.12.0",
+    "pouchdb": "8.0.1",
+    "ws": "8.13.0"
   }
 }
