--- a/rest/package.json
+++ b/rest/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nexash-api",
-  "version": "23.1.28",
-  "description": "Nexa Shell API",
+  "name": "nexash-rest",
+  "version": "23.3.13",
+  "description": "Nexa Shell REST API",
   "author": "Ava's DAO <support@avasdao.org>",
   "main": "server.js",
   "type": "module",
@@ -16,7 +16,7 @@
     "csv-parser": "3.0.0",
     "ethers": "5.7.0",
     "express": "4.18.1",
-    "express-rate-limit": "^6.7.0",
+    "express-rate-limit": "6.7.0",
     "moment": "2.29.0",
     "nodemailer": "6.7.8",
     "numeral": "2.0.6",
