--- a/rest/package.json
+++ b/rest/package.json
@@ -18,6 +18,8 @@
     "express": "4.18.1",
     "express-rate-limit": "6.7.0",
     "moment": "2.29.0",
+    "nexajs": "23.3.11",
+    "node-fetch": "3.3.1",
     "nodemailer": "6.7.8",
     "numeral": "2.0.6",
     "pouchdb": "7.3.0",
