Update to latest RPC.

--- a/nexadb/package.json
+++ b/nexadb/package.json
@@ -1,15 +1,15 @@
 {
   "name": "nexadb",
-  "version": "23.3.11",
-  "description": "Manages all indexing functions for the suite of Nexa Shell services.",
+  "version": "23.3.24",
+  "description": "Manages data storage, indexing and broadcast functions for the Nexa database.",
   "main": "index.js",
   "type": "module",
   "repository": "https://github.com/avasdao/nexash",
   "author": "Ava's DAO developers",
   "license": "MIT",
   "dependencies": {
-    "@nexajs/rpc": "23.1.12",
-    "cors": "^2.8.5",
+    "@nexajs/rpc": "23.3.18",
+    "cors": "2.8.5",
     "express": "4.18.2",
     "express-sse": "0.5.3",
     "moment": "2.29.4",
