--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -2,8 +2,10 @@ version: '3.3'
 
 services:
   nexash:
-    image: nexash
     build: .
+    image: nexash
+    container_name: nexash
+    restart: always
     ports:
       - '127.0.0.1:3000:3000'
     # volumes:
