--- a/graphql/package.json
+++ b/graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexash-graphql",
-  "version": "23.3.12",
+  "version": "23.3.25",
   "description": "Manages GraphQL requests.",
   "main": "index.js",
   "type": "module",
@@ -14,6 +14,7 @@
     "express": "4.18.2",
     "express-rate-limit": "6.7.0",
     "graphql": "16.6.0",
+    "graphql-bigint": "1.0.0",
     "graphql-http": "1.16.0",
     "graphql-subscriptions": "2.0.0",
     "graphql-ws": "5.12.0",
