--- a/graphql/package.json
+++ b/graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexash-graphql",
-  "version": "23.3.25",
+  "version": "23.3.26",
   "description": "Manages GraphQL requests.",
   "main": "index.js",
   "type": "module",
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "@apollo/server": "4.5.0",
+    "@nexajs/address": "23.3.18",
     "body-parser": "1.20.2",
     "cors": "2.8.5",
     "express": "4.18.2",
