--- a/graphql/package.json
+++ b/graphql/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "@apollo/server": "4.5.0",
+    "@bitauth/libauth": "1.19.1",
     "@nexajs/address": "23.3.18",
     "body-parser": "1.20.2",
     "cors": "2.8.5",
