--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "graphql": "16.6.0",
     "graphql-ws": "5.12.0",
     "isomorphic-ws": "5.0.0",
     "moment": "2.29.4",
