--- a/web/package.json
+++ b/web/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nexash-web",
-  "version": "23.7.1",
+  "version": "23.7.8",
   "license": "MIT",
-  "description": "NexaShell offers enterprise-class data delivery services for the Nexa blockchain.",
+  "description": "NexaShell offers enterprise-class data delivery services for Nexa developers.",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nexajs/address": "23.6.23",
+    "@nexajs/rostrum": "23.6.21",
     "@nexajs/utils": "23.5.15",
     "@pinia/nuxt": "0.4.7",
     "graphql": "16.6.0",
