--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexash-web",
-  "version": "23.7.8",
+  "version": "23.7.13",
   "license": "MIT",
   "description": "NexaShell offers enterprise-class data delivery services for Nexa developers.",
   "scripts": {
@@ -22,6 +22,7 @@
     "numeral": "2.0.6",
     "nuxt": "3.0.0",
     "pinia": "2.0.32",
+    "pouchdb": "8.0.1",
     "uuid": "9.0.0",
     "ws": "8.12.0",
     "zeromq": "6.0.0-beta.16"
