--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -14,3 +14,5 @@ services:
     environment:
       HOST: 0.0.0.0
       PORT: 3000
+      COUCHDB_USER: ${COUCHDB_USER} # change this to match your system's ENV
+      COUCHDB_PASSWORD: ${COUCHDB_PASSWORD} # change this to match your system's ENV
