--- a/graphql/package.json
+++ b/graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexash-graphql",
-  "version": "23.3.26",
+  "version": "23.9.26",
   "description": "Manages GraphQL requests.",
   "main": "index.js",
   "type": "module",
@@ -10,7 +10,6 @@
   "dependencies": {
     "@apollo/server": "4.5.0",
     "@bitauth/libauth": "1.19.1",
-    "@nexajs/address": "23.3.18",
     "body-parser": "1.20.2",
     "cors": "2.8.5",
     "express": "4.18.2",
@@ -20,6 +19,7 @@
     "graphql-http": "1.16.0",
     "graphql-subscriptions": "2.0.0",
     "graphql-ws": "5.12.0",
+    "nexajs": "23.9.5",
     "pouchdb": "8.0.1",
     "ws": "8.13.0"
   }
