--- a/web/package.json
+++ b/web/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nexash-web",
-  "version": "23.7.13",
+  "version": "23.9.28",
   "license": "MIT",
-  "description": "NexaShell offers enterprise-class data delivery services for Nexa developers.",
+  "description": "NexaShell offers enterprise-class data delivery services for Nexa builders.",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -11,19 +11,18 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nexajs/address": "23.6.23",
-    "@nexajs/rostrum": "23.6.21",
-    "@nexajs/utils": "23.5.15",
     "@pinia/nuxt": "0.4.7",
     "graphql": "16.6.0",
     "graphql-ws": "5.12.0",
     "isomorphic-ws": "5.0.0",
     "moment": "2.29.4",
+    "nexajs": "23.9.5",
     "numeral": "2.0.6",
     "nuxt": "3.0.0",
     "pinia": "2.0.32",
     "pouchdb": "8.0.1",
     "uuid": "9.0.0",
+    "victory": "36.6.11",
     "ws": "8.12.0",
     "zeromq": "6.0.0-beta.16"
   },
