--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexash-web",
-  "version": "23.9.28",
+  "version": "23.11.2",
   "license": "MIT",
   "description": "NexaShell offers enterprise-class data delivery services for Nexa builders.",
   "scripts": {
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "0.4.7",
+    "chart.js": "4.4.0",
     "graphql": "16.6.0",
     "graphql-ws": "5.12.0",
     "isomorphic-ws": "5.0.0",
@@ -22,7 +23,7 @@
     "pinia": "2.0.32",
     "pouchdb": "8.0.1",
     "uuid": "9.0.0",
-    "victory": "36.6.11",
+    "vue-chartjs": "5.2.0",
     "ws": "8.12.0",
     "zeromq": "6.0.0-beta.16"
   },
