--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexash-web",
-  "version": "23.11.2",
+  "version": "24.5.27",
   "license": "MIT",
   "description": "NexaShell offers enterprise-class data delivery services for Nexa builders.",
   "scripts": {
@@ -16,6 +16,7 @@
     "graphql": "16.6.0",
     "graphql-ws": "5.12.0",
     "isomorphic-ws": "5.0.0",
+    "jspdf": "2.5.1",
     "moment": "2.29.4",
     "nexajs": "23.9.5",
     "numeral": "2.0.6",
