--- a/graphql/docker-compose.yml
+++ b/graphql/docker-compose.yml
@@ -12,5 +12,6 @@ services:
     environment:
       COUCHDB_USER: ${COUCHDB_USER} # change this to match your system's ENV
       COUCHDB_PASSWORD: ${COUCHDB_PASSWORD} # change this to match your system's ENV
+      GRAPHQL_PORT: ${GRAPHQL_PORT} # change this to match your system's ENV
       HOST: 0.0.0.0
       PORT: 6000
