--- a/nexadb/nightlies/package.json
+++ b/nexadb/nightlies/package.json
@@ -3,5 +3,6 @@
   "version": "24.7.24",
   "description": "Nightly batch processes.",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module"
 }
