--- a/rest/docker-compose.yml
+++ b/rest/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: .
     image: rest
     container_name: rest
-    restart: unless-stopeed
+    restart: unless-stopped
     network_mode: 'host'
     # ports:
     #   - '127.0.0.1:3000:3000'
