--- a/rest/package.json
+++ b/rest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexash-rest",
-  "version": "23.3.13",
+  "version": "24.9.22",
   "description": "Nexa Shell REST API",
   "author": "Ava's DAO <support@avasdao.org>",
   "main": "server.js",
@@ -11,20 +11,18 @@
     "public": "cd slate && bundle exec middleman serve"
   },
   "dependencies": {
+    "@nexajs/rpc": "23.5.15",
     "bitcoin-core": "4.1.0",
     "cors": "2.8.5",
     "csv-parser": "3.0.0",
-    "ethers": "5.7.0",
-    "express": "4.18.1",
+    "express": "4.21.0",
     "express-rate-limit": "6.7.0",
     "moment": "2.29.0",
-    "nexajs": "23.3.11",
     "node-fetch": "3.3.1",
     "nodemailer": "6.7.8",
     "numeral": "2.0.6",
-    "pouchdb": "7.3.0",
-    "superagent": "7.1.3",
-    "uuid": "8.3.2",
+    "pouchdb": "9.0.0",
+    "uuid": "10.0.0",
     "validator": "13.7.0"
   }
 }
