--- a/graphql/package.json
+++ b/graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexash-graphql",
-  "version": "24.10.9",
+  "version": "24.10.11",
   "description": "Manages GraphQL requests.",
   "main": "index.js",
   "type": "module",
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "@apollo/server": "4.11.0",
+    "@nexajs/rpc": "24.10.10",
     "body-parser": "1.20.2",
     "cors": "2.8.5",
     "express": "4.21.1",
